--- a/apitest/test.html
+++ b/apitest/test.html
@@ -52,7 +52,7 @@
     });
 
     function chatGPT() {
-      const api_key = "sk-proj-cIvC2T6iVzZHiWxAZyRjT3BlbkFJGpRqcvtP8c9orukbWKpP"  // <- API KEY 입력
+      const api_key = ""  // <- API KEY 입력
       const keywords = document.getElementById('keywords').value
       $('#loading').show();
 
